RESOLVED FIXED117630
Fix WebKitTestRunner crashes.
https://bugs.webkit.org/show_bug.cgi?id=117630
Summary Fix WebKitTestRunner crashes.
Byungwoo Lee
Reported 2013-06-14 01:22:01 PDT
WebKitTestRunner will crash when WebProcess is not responsible.
Attachments
Patch (3.26 KB, patch)
2013-06-14 01:45 PDT, Byungwoo Lee
darin: review+
commit-queue: commit-queue-
Patch (3.02 KB, patch)
2013-07-02 07:47 PDT, Byungwoo Lee
no flags
Byungwoo Lee
Comment 1 2013-06-14 01:45:11 PDT
Darin Adler
Comment 2 2013-06-14 09:22:26 PDT
Comment on attachment 204683 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204683&action=review > Tools/WebKitTestRunner/TestController.cpp:757 > + TestInvocation::dumpWebProcessUnresponsiveness("<unknown> - TestController::run - Failed to reset state to consistent values\n"); Should this string have a newline in it?
Byungwoo Lee
Comment 3 2013-06-23 23:25:11 PDT
Comment on attachment 204683 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204683&action=review Thanks for the r+ >> Tools/WebKitTestRunner/TestController.cpp:757 >> + TestInvocation::dumpWebProcessUnresponsiveness("<unknown> - TestController::run - Failed to reset state to consistent values\n"); > > Should this string have a newline in it? Yes, the string will be passed to the TestInvocation::dump() through the argument 'textToStdout', and the tailing newline will separate the string and the '#EOF' string that the dump() function prints after the string. (All the stdout messages passed to the dump() function contains tailing newline with the current dump() implementation)
WebKit Commit Bot
Comment 4 2013-07-02 07:24:39 PDT
Comment on attachment 204683 [details] Patch Rejecting attachment 204683 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 204683, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Tools/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/1014522
Byungwoo Lee
Comment 5 2013-07-02 07:47:24 PDT
Created attachment 205914 [details] Patch Fix ChangeLog error
WebKit Commit Bot
Comment 6 2013-07-02 09:19:47 PDT
Comment on attachment 205914 [details] Patch Clearing flags on attachment: 205914 Committed r152295: <http://trac.webkit.org/changeset/152295>
WebKit Commit Bot
Comment 7 2013-07-02 09:19:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.