Fix WebKitTestRunner crashes. https://bugs.webkit.org/show_bug.cgi?id=117630

Reviewed by Darin Adler.

Create static function to dump for WebProcess unresponsiveness status,
and use it before calling TestController::runTest().

Accessing TestController::m_currentInvocation before calling
TestController::runTest() can make crash because the invocation
instance will be assigned at the function.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::run):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::dumpWebProcessUnresponsiveness):
* WebKitTestRunner/TestInvocation.h:


Canonical link: https://commits.webkit.org/136318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152295 268f45cc-cd09-0410-ab3c-d52691b4dbfc